syntax = "proto3";

package nodestatus.v1;
option go_package = "dev-tools-services/gen/nodestatus/v1;nodestatusv1";
import "google/protobuf/any.proto";


message NodeStatus {
        string node_id = 1;
        string type = 2;
        google.protobuf.Any data = 3;
}

message NodeStatusNextNode {
        string next_node_id = 1;
}

message NodeStatusSetVariable {
        string variable_name = 1;
        google.protobuf.Any variable_value = 2;
}

